[package]
name = "sysauth-nss"
version = "0.1.0"
authors = ["Chandler Newman <chandler2newman@hotmail.co.uk>"]
edition = "2018"

[lib]
name = "nss_sysauth"
crate-type = [ "cdylib" ]

[dependencies]
env_logger = "0.11.5"
gethostname = "0.5.0"
libc = "0.2"
libnss = "0.8.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
ureq = "2.12.1"
